# libflac-rs

./: CLAUDE.md  Cargo.toml  LICENSE  ORACLE.md  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  publish-crates-io.yml
cref/: shim.c
src/: bitmath.rs  bitreader.rs  bitwriter.rs  crc.rs  decoder.rs  encoder.rs  fixed.rs  format.rs  frame.rs  lib.rs  md5.rs  metadata.rs  ogg.rs  rice.rs  subframe.rs  window.rs
src/lpc/: autocorr.rs  levinson.rs  mod.rs  quantize.rs  residual.rs
tests/: cref.rs
