[package]
name = "libflac-rs"
# Version scheme (shared with the sibling bit-exact ports, e.g. lzma-sdk-rs,
# libzstd-bitexact-rs): 0.<flac-digits>.<patch>. The minor encodes the upstream
# libFLAC release this crate is bit-exact with (1.4.3 -> 143); the patch counts
# our own fixes against that target (0.143.1, 0.143.2, ...). The leading 0 marks
# the public API as still unstable. Retargeting a new libFLAC bumps the minor.
# Keep in sync with the git tag (v0.143.1).
version = "0.143.1"
edition = "2024"
rust-version = "1.85"
license = "BSD-3-Clause"
description = "Bit-exact pure-Rust port of libFLAC 1.4.3: a complete FLAC encoder and decoder (incl. Ogg FLAC) byte-identical to the C reference."
repository = "https://github.com/danifunker/libflac-rs"
documentation = "https://docs.rs/libflac-rs"
keywords = ["flac", "audio", "lossless", "chd", "encoder"]
categories = ["multimedia::audio", "multimedia::encoding"]
readme = "README.md"
# The published crate is a pure-Rust, dependency-free library plus its docs (src,
# README/ROADMAP/ORACLE/LICENSE). Drop only the AI dev guide and the CI config.
# There is no C, no build script, and no build/runtime dependency to exclude — the
# byte-exact differential oracle is no longer vendored (see ORACLE.md).
exclude = ["/.github", "/CLAUDE.md"]

[lib]
name = "libflac_rs"

[profile.dev]
# The round-trip tests encode and decode the full corpus across every depth/level;
# opt-level 1 keeps debug test runs brisk.
opt-level = 1
